fixed downloaded songs appearing separately from folder, added dark mode toggle (v1)

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -15,6 +15,12 @@ body
     font-family: Impact, Charcoal, sans-serif;
 }
 
+.dark-mode
+{
+    background-color: black;
+    color: white;
+}
+
 * {box-sizing: border-box;}
 
 /* Form */
